--- a/style.css
+++ b/style.css
@@ -4,11 +4,38 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0; /* Remove default body margin */
 }
 
 .container {
   display: flex;
   flex-direction: inherit;
+  justify-content: center;
+  width: 100%;
+  margin-top: 60px;
+}
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  overflow: hidden;
+  z-index: 1000; /* Ensure the navbar appears above other content */
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
 .table-wrapper {
