--- a/style.css
+++ b/style.css
@@ -66,8 +66,17 @@ body {
 {
   font-size: 18px;
 }
-
-
+#nemiresult{
+  height: auto;
+}
+#nemiresult img{
+  width: 100%;
+  height: auto;
+}
+.greyed-out {
+  filter: grayscale(100%);
+  opacity: 0.9;
+}
 
 table {
   width: 100%;
