--- a/style.css
+++ b/style.css
@@ -1,35 +1,48 @@
-/* Media queries for mobile devices */
-@media only screen and (max-width: 768px) {
-  #navbar a {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    box-sizing: border-box;
-  }
-
+@media only screen and (min-width: 600px) {
+  /* Add styles for screens larger than 600px width */
   .container {
-    flex-direction: column;
+    width: 90%;
   }
+}
 
-  .table-wrapper,
+@media only screen and (max-width: 600px) {
+  /* Mobile styles */
   .content-wrapper,
   .tips-wrapper {
-    width: 100%;
-    margin: 0;
-  }
-
-  .tips-wrapper {
-    margin-right: 0;
+    padding: 10px; /* Adjust padding for smaller screens */
   }
 
   .reset-button {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 0px;
+    border-radius: 0px;
+    padding: 0px;
+    height: 100%;
   }
 
   .reset-button button {
+    border-radius: 0px;
+    display: block; /* Make button full width on mobile */
     width: 100%;
+    background: transparent;
+    padding: 10px;
+    border: 0px solid #242424;
+    height: auto;
+    color: #333;
+    font-size: 25px;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.4s ease;
+  }
+
+  .tips-wrapper button {
+    float: none; /* Remove float for mobile layout */
+    font-size: 18px;
+    background: #eaded4;
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 7px;
   }
 }
 
